[tool.poetry]
name = "kwai"
version = "0.2.0"
description = "KWAI Sport Club Management - API"
authors = ["Franky Braem <franky.braem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
mysql-connector-python = "^8.3.0"
sql-smith = "^1.1.1"
pyisemail = "^2.0.1"
python-multipart = "^0.0.9"
loguru = "^0.7.0"
jinja2 = "^3.1.2"
tomli = "^2.0.1"
pyjwt = "^2.7.0"
typer = {extras = ["all"], version = "^0.9.0"}
asyncmy = "^0.2.8"
cryptography = "^42.0.2"
markdown = "3.5.2"
pydantic= "2.6.3"
redis = "^5.0.1"
inject = "^5.2.0"
pendulum = "^3.0.0"
async-lru = "^2.0.4"
bcrypt = "^4.1.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = {extras = ["d"], version = "^24.3.0"}
mypy = "^1.10.0"
ruff = "~0.3.7"
pytest-sugar = "^1.0.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^5.0.0"
pre-commit = "^3.4.0"
pendulum = {extras = ["test"], version = "^3.0.0"}
deepdiff = "^6.7.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocstrings = "^0.24.0"
mkdocs-material = "^9.1.19"
mkdocs-monorepo-plugin = "^1.0.5"
mkdocstrings-python = "^1.2.1"
coverage-badge = "^1.1.0"

[tool.pytest.ini_options]
markers = [
    "db: Marks a test that needs a database",
    "mail: Marks a test that needs a mailer",
    "bus: Marks a test that needs a bus (redis)",
    "api: Marks a test that needs the fastapi server"
]
asyncio_mode = "auto"

[tool.coverage.report]
exclude_also = [
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]
[tool.mypy]
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = "sql_smith.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deepdiff.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "D", "I", "N"]
fixable = ["I"]
ignore = ["D107", "D203", "D213", "D406", "D407", "E501", "N818", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
