[tool.poetry]
name = "kwai"
version = "0.1.0"
description = "KWAI Sport Club Management - API"
authors = ["Franky Braem <franky.braem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.93.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
mysql-connector-python = "^8.0.31"
sql-smith = "^1.0.1"
pyisemail = "^2.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
loguru = "^0.6.0"
jinja2 = "^3.1.2"
tomli = "^2.0.1"
dramatiq = {extras = ["rabbitmq", "watch"], version = "^1.13.0"}
lagom = "^2.2.0"
pyjwt = "^2.6.0"
typer = {extras = ["all"], version = "^0.7.0"}
redis = "^4.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.9"
black = {extras = ["d"], version = "^23.1.0"}
mypy = "^1.0.0"
ruff = "^0.0.254"
pytest-sugar = "^0.9.6"
httpx = "^0.23.3"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.0.11"
mkdocs-monorepo-plugin = "^1.0.4"
pytest-asyncio = "^0.20.3"

[tool.pytest.ini_options]
markers = [
    "integration: Mark an integration test"
]
asyncio_mode = "auto"

[tool.pylint]
good-names = "db,id,ex,to,cc"
msg-template= "{path}:{line}:{column}:{C}:({symbol}) {msg}"
generated-members = ".*Table"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable="duplicate-code"

[tool.pylint.format]
max-line-length = "88"

[tool.mypy]

[[tool.mypy.overrides]]
module = "sql_smith.*"
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F", "B", "D", "I", "N"]
ignore = ["D107", "D203", "D213", "N818"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
